ui/src/App.css
.App {
  position: absolute;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  flex-direction: column;
  max-height: 100vh;
  height: 100vh;
  font-size: 1.5em;
}

.search.home {
  flex: 0 1 auto;
  text-align: center;
  margin: 2em;
}
.search.scan {
  flex: 0 1 auto;
  text-align: left;
  margin: 2em;
}
.hide-scan {
  display: none;
}


.image_list {
  text-align: left;
}

.logo_front {
  width: 40%;
  min-width: 300px;
}

.image_search {
  width: 100%;
  /* margin-left: 10%; */
}
.search.scan>.image_search {
  margin-left: 0;
}
.image_search.image_scan {
  margin-left: 0;
}

.App.scanning {
  text-align: left;
}
.logo_scan {
  width: 30%;
}

.scan_results {
  margin-left: 2em;
  margin-right: 2em;
  display: flex;
  flex: 0 0 auto;
  flex-direction: column;
}
.filters {
  margin-bottom: 1em;
}

.cve-table {
  width: 100%;
}
.cve-tr {
  vertical-align: top;
}
.cve-th-left {
  text-align: left;
}
.cve-tr:nth-child(even) {
  background-color: rgba(255,255,255,0.1)
}

.btn-cve {
  white-space: nowrap;
}
.btn-cve-Critical {
  background-color: rgb(175,15,13) !important;
}

.btn-cve-High {
  background-color: rgb(255,19,0) !important;
}

.btn-cve-Medium {
  background-color: rgb(255,154,0) !important;
}

.btn-cve-Low {
  background-color: rgb(255,203,71) !important;
}

.btn-cve-Info {
  background-color: rgb(41,176,238) !important;
}

.cve-Critical {
  color: rgb(175,15,13) !important;
}

.cve-High {
  color: rgb(255,19,0) !important;
}

.cve-Medium {
  color: rgb(255,154,0) !important;
}

.cve-Low {
  color: rgb(255,203,71) !important;
}

.cve-Info {
  color: rgb(41,176,238) !important;
}

.nowrap {
  white-space: nowrap;
}

.nowrap-cve {
  white-space: nowrap;
}
.packages-cve:not(:last-child)::after {
  content: ', ';
}
.btn-pkg-cve {
  width: 14em !important;
  margin-right: 0.3em !important;
  margin-bottom: 0.3em !important;
  /* white-space: normal !important; */
}

.odd-even-highlight:nth-child(even) {
  background-color: rgba(255,255,255,0.1);
}

.image-select-input>div {
  padding: 0 !important;
  padding-left: 1em !important;
  height: 3em;
  font-size: 1.2em;
}

.chips-top {
  margin-bottom: 1em;
}

.release {
  text-align: center;
  font-size: 0.8em;
  color: #999999;
}

.btn-cve-layer {
  padding: 0 !important;
  min-width: 20px !important;
}

.btn-cve-bg-gray {
  background-color: #AAAAAA !important;
}

